@@ -3,46 +3,6 @@
     "name": "Colin",
     "gbp": 250,
     "achievements": [
-      7,
-      5,
-      12,
-      15,
-      8,
-      30,
-      3,
-      4,
-      9,
-      13,
-      22,
-      21,
-      20,
-      23,
-      1,
-      2,
-      16,
-      14,
-      6,
-      35,
-      44,
-      45,
-      34,
-      43,
-      11,
-      18,
-      52,
-      50,
-      36,
-      54,
-      55,
-      49,
-      37,
-      42,
-      47,
-      19,
-      48,
-      28,
-      29,
-      38
     ],
     "simmerdown": 0,
     "account": 0,
